--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="refine | Build your React-based CRUD applications, without constraints."
+      content="Pixels | Draw as you like"
     />
     <meta
       data-rh="true"
